--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,55 @@
-h1 {
-  color: red;
+@import url();
+
+:root {
+  --color-primary-dark: #31261a;
+  --color-primary-light: #faf4ea;
+  --color-brand-light: #819b57;
+  --color-brand-dark: #465929;
+}
+
+body {
+  color: var(--color-primary-dark);
+}
+
+.section-title .accent {
+  color: var(--color-brand-dark);
+}
+
+/*+ Header */
+.link {
+  color: var(--color-primary-light);
+  text-align: center;
+  font-size: 18px;
+}
+
+.link:hover {
+  color: var(--color-brand-light);
+}
+
+.button {
+  border-radius: 8px;
+  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand-light);
+  color: var(--color-primary-light);
+  padding: 16px 32px;
+  cursor: pointer;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+/*+ Hero section */
+.hero-title {
+  color: var(--color-primary-light);
+}
+
+.accent {
+  color: var(--color-brand-light);
+}
+
+/*+ Traditions section */
+.advantages-list {
+  backdrop-filter: blur(2px);
+  background: var(--color-brand);
+  color: var(--color-primary-light);
 }
