--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,30 @@
-@import url();
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 300;
+  src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 600;
+  src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 900;
+  src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2');
+}
 
 :root {
   --color-primary-dark: #31261a;
@@ -8,7 +34,10 @@
 }
 
 body {
+  font-family: 'Poppins', sans-serif;
   color: var(--color-primary-dark);
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 .section-title .accent {
@@ -19,11 +48,11 @@ body {
 .link {
   color: var(--color-primary-light);
   text-align: center;
-  font-size: 18px;
 }
 
 .link:hover {
   color: var(--color-brand-light);
+  font-weight: 600;
 }
 
 .button {
@@ -33,14 +62,15 @@ body {
   color: var(--color-primary-light);
   padding: 16px 32px;
   cursor: pointer;
-  font-family: Poppins;
-  font-size: 18px;
   font-weight: 600;
 }
 
 /*+ Hero section */
 .hero-title {
   color: var(--color-primary-light);
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
 }
 
 .accent {
@@ -48,8 +78,63 @@ body {
 }
 
 /*+ Traditions section */
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
+
 .advantages-list {
-  backdrop-filter: blur(2px);
-  background: var(--color-brand);
   color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+}
+
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+/*+ Chefs section */
+.chefs-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/*+ Formats section */
+.format-title {
+  color: var(--color-primary-light);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.format-text {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+/*+ Contact-section */
+
+/*+ Footer */
+.address-link {
+  color: var(--color-primary-light);
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.address-link:hover {
+  color: var(--color-brand-light);
+}
+
+.address-copyright {
+  color: #a18268;
+  font-size: 14px;
 }
