--- a/css/style.css
+++ b/css/style.css
@@ -29,43 +29,92 @@
 :root {
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
-  --color-brand-light: #819b57;
+  --color-secondary-dark: #a18268;
+  --color-brand-normal: #819b57;
+  --color-brand-light: #cfcfbc;
   --color-brand-dark: #465929;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: var(--color-primary-light);
   color: var(--color-primary-dark);
   font-size: 18px;
   line-height: 1.5;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 24px;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.section {
+  padding: 48px 0;
 }
 
 .section-title .accent {
   color: var(--color-brand-dark);
 }
 
-/*+ Header */
 .link {
   color: var(--color-primary-light);
   text-align: center;
 }
 
 .link:hover {
-  color: var(--color-brand-light);
-  font-weight: 600;
+  color: var(--color-brand-normal);
 }
 
 .button {
   border-radius: 8px;
-  border: 2px solid var(--color-brand-light);
-  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-normal);
+  background-color: var(--color-brand-normal);
   color: var(--color-primary-light);
   padding: 16px 32px;
   cursor: pointer;
   font-weight: 600;
 }
 
+/*+ Header */
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  flex-grow: 1;
+  gap: 64px;
+  justify-content: center;
+}
+
 /*+ Hero section */
+.hero-section {
+  padding: 272px 0;
+  background: url(../images/hero-bg.jpg);
+  background-position: center top;
+  background-size: cover;
+}
+
 .hero-title {
   color: var(--color-primary-light);
   text-align: center;
@@ -74,46 +123,128 @@ body {
 }
 
 .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
+}
+
+/*+ Advantages section */
+.advantages-section {
+  padding: 16px 0;
+  background-color: var(--color-brand-normal);
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--color-primary-light);
 }
 
 /*+ Traditions section */
+.traditions-section {
+  padding-top: 96px;
+}
+
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+
+.traditions-title {
+  margin-bottom: 42px;
+}
+
 .section-title {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
 }
 
-.advantages-list {
-  color: var(--color-primary-light);
-  background-color: var(--color-brand-light);
-}
-
-.advantages-item {
-  font-size: 20px;
-  font-weight: 300;
+.section-title.centered {
+  text-align: center;
 }
 
 .traditions-text .uppercase {
   text-transform: uppercase;
 }
 
+.traditions-text.limited {
+  max-width: 340px;
+}
+
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-weight: 600;
 }
 
 /*+ Chefs section */
 .chefs-title {
+  max-width: 532px;
+  margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+  content: '';
+  display: block;
+  width: 352px;
+  height: 2px;
+  background-color: var(--color-brand-light);
+}
+
+.chef-title {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
 
+.chef-photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primary-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
+}
+
 /*+ Formats section */
+.format-card {
+  height: 444px;
+  padding: 24px;
+  border: 1px solid lightgray;
+  border-radius: 16px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%
+  );
+}
+
+.formats-title {
+  margin-bottom: 80px;
+}
+
 .format-title {
   color: var(--color-primary-light);
   font-size: 24px;
   font-weight: 600;
+}
+
+.formats-list {
+  flex-wrap: wrap;
+  display: flex;
+  gap: 20px;
+}
+
+.formats-item {
+  flex-basis: calc((100% - 40px) / 3);
 }
 
 .format-text {
@@ -121,9 +252,44 @@ body {
   font-weight: 300;
 }
 
+/** Carousel */
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  border: 1px solid var(--color-primary-dark);
+}
+
+.carousel-arrow {
+  fill: var(--color-primary-dark);
+}
+
+.carousel-button:hover {
+  background-color: var(--color-primary-dark);
+}
+
+.carousel-button:hover .carousel-arrow {
+  fill: var(--color-primary-light);
+}
+
 /*+ Contact-section */
+.contact-title {
+  margin-bottom: 16px;
+}
 
 /*+ Footer */
+.footer {
+  background-color: var(--color-primary-dark);
+  background-image: url(../images/footer-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
@@ -131,7 +297,15 @@ body {
 }
 
 .address-link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
+}
+
+.address-icon {
+  fill: var(--color-primary-light);
+}
+
+.address-icon:hover {
+  fill: var(--color-brand-normal);
 }
 
 .address-copyright {
